automatically backed up by learn

--- a/new-properties.html
+++ b/new-properties.html
@@ -12,7 +12,7 @@
   <!-- links -->
   <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
 
-  <h3>New Properties</h3>
-  
+  <h3>Old Properties</h3>
+
 </body>
 </html>
